descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2009-10-XX  Release 7.16.2                                     ---
----------------------------------------------------------------------

* fix crash of 'attach ogl' commands on OSX - Cliff Yapp
* added option to change display managers in MGED - Cliff Yapp


----------------------------------------------------------------------
--- 2009-09-29  Release 7.16.0                                     ---
----------------------------------------------------------------------

* added '-u' flag to 3dm-g - uses UUID for import names - Cliff Yapp
* improved fb-png and pix-png defaut gamma correction - Sean Morrison
* added a '-g' gamma correction option to pix-png - Sean Morrison
* added mged '-a' option for attaching display manager - Sean Morrison
* increased maximum size of framebuffer windows - Sean Morrison
* removed framebuffer option 'f' from interfaces - Sean Morrison
* reversed and simplified arguments to copyeval command - Bob Parker
* 3dm-g converter creates automatic top-level combination - Cliff Yapp
* added procedural 'human' generator command and gui plugin to archer
	- Stephen Kennedy, Bob Parker
* added BoT commands to archer (e.g., bot_flip, bot_sync) - Bob Parker
* implemented support for sub-object erasures - Bob Parker
* changed Pro/E exporter to output unoriented BoT objects - Bob Parker
* fixed a rendering bug with left-handed BoT objects - Bob Parker
* pipe now validates independent of parameter order - Daniel Roßberg
* added '-r' color randomize option to 3dm-g importer - Cliff Yapp
* enhanced '-v' verbosity option in 3dm-g importer - Cliff Yapp
* readded -A & -o attribute options to 'draw' and 'erase' - Bob Parker
* fixed bug in 'E' command to show object names - John Anderson
* initial obj-g geometry importer - Erik Greenwald